# srt_sender

./: CMakeLists.txt  README.md  main.cc  main.cpp
scripts/: install_deps.sh  setupvars.sh
